--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.4",
-        "updated": "2025-12-06 23:17:43"
+        "version": "1.5.6",
+        "updated": "2025-12-12 15:28:14"
     },
     "txwelcome": "Welcome",
     "quotes": [
@@ -22,25 +22,16 @@
         "Sat",
         "Sun"
     ],
-    "solcalmonthsxx": [
-        "% New Febru",
-        "% New March",
-        "% New April",
-        "% New May",
-        "% New June",
-        "% New July",
-        "% New Augus",
-        "% New Septe",
-        "% New Octo",
-        "% New Nove",
-        "% New Dece",
-        "% New Janu"
-    ],
-    "solcalseasons": [
-        "Early Spring",
-        "Early Summer",
-        "Early Autumn",
-        "Early Winter"
+    "lighttime": "[DF]Light season",
+    "solcal_lph": [
+        "Waxing (%)",
+        "Arrival in light (%)",
+        "Light rest (%)",
+        "Farewell to light (%)",
+        "Waning (%)",
+        "Arrival in darkness (%)",
+        "Dark rest (%)",
+        "Departure from darkness (%)"
     ],
     "moon": "Moon",
     "xxdays": {
@@ -130,10 +121,10 @@
     "txmore": "[DF]{txfullscr} prevents the screen from turning off: For example, I hung an old tablet with a ‘sun dial’ on the wall for my niece. With {txuhrsinn}, you can specify whether the clock runs clockwise (south) or counterclockwise. If you change the direction of rotation, the part of the sun circle below the horizon is in front of you (see next page for details). [~LF][~LF]{txcolours} selects different dials. {txnightmode} {auto} changes at sunset, -6° at the end of twilight, +6° before. - If your settings are not applied, tap the refresh button at the bottom right of the dial. [~LF][~LF]You can zoom in on the dial with two fingers (or by triple-tapping). If you want to move the zoomed image, do so slowly. Fast movements will swipe to the next page. - On the next page you will find an explanation of the dial.[DF][DF][DF]",
     "txdata": "[DF]Data",
     "txlocdata": "[DF]Calculations from Gordon's Sun Clock for your specific location should match the astronomical almanac to within 0.0005 arc seconds³:[DF]",
-    "txobjdata": "– Sun¹ –[~LF]Time: {clocktm}[~LF]Temporal hour: {temptm}[~LF]Solar calendar: {cal_gordon}[~LF]Daylight: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– Moon² –[~LF]Full moon: {moon_full} [~LF]New moon: {moon_new}[~LF]Solar calendar: {moon_gordon}[~LF]Illuminated: {moon_illum}[~LF]Size: {moon_sizep} (85-100)[~LF][~LF]– Brightness –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Mercury: {merkur_magp} (0-100)[~LF][~LF]Explanation: ¹ Time: GPS = synchronised | Temporal hour: ‘ἡ’ unequal hour (0.0[NDASH]11.9) of the day or ‘ν’ of the night. Aligned with completion: e.g. the sixth hour begins at 5.1, but was proclaimed at 6.0 (= from the 6th hour onwards). ‘φ’ Night watch with unequal ‘minutes’ (0φ00[NDASH]3φ59) | Solar calendar: See button below for information | Daylight & Agnihotra: Rise[NDASH]Set today [Rise tomorrow], ⁺ = current GPS | ² Full and new moon: Time (in/before days) | ³ Moon is approx. 2000 arc seconds in size[DF][DF]",
-    "buttonsolcal": "Sun calendar",
-    "txlegende0": "[b]–– Legend:[/b]",
-    "txlegende": "[DF]☉ Sun, ● Moon (with phases)[~LF][~LF]♀ Venus (pearl-coloured), ♂ Mars (reddish), ♃ Jupiter (striped), ♄ Saturn (with rings), ☿ Mercury (grey)[~LF][~LF][s] Sirius, [k] Canopus, [f] Alpha Centauri, [a] Arcturus, [w] Vega, [c] Capella, [r] Rigel, [p] Procyon, [b] Betelgeuse, [h] Achernar[DF][DF][DF][DF]",
+    "txobjdata": "– Sun¹ –[~LF]Time: {clocktm}[~LF]Temporal hour: {temptm}[~LF]Light day: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF]Solstice: {sun_soli}[~LF]Equinox: {sun_equi}{sun_lighttime}[~LF][~LF]– Moon² –[~LF]New moon: {moon_new}[~LF]Full moon: {moon_full}[~LF]Moon night: {moon_gordon}[~LF]Illuminated: {moon_illum}[~LF]Size: {moon_sizep} (85-100)[~LF][~LF]– Brightness –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Mercury: {merkur_magp} (0-100)[~LF][~LF]¹ Time: GPS = synchronised | Temporal hour: local unequal hour (0.0[NDASH]11.9) ‘ἡ’ of the day or ‘ν’ of the night. ‘φ’ night watch with unequal “minutes” (0φ00[NDASH]3φ59) | {lighttime-}: see below | Light day & Agnihotra: rise[NDASH]set today [rise tomorrow], ⁺ = current GPS | ² Full and new moon: moment (in/before days) | Moon night: see below | ³ Moon is approx. 2000 arcseconds in size[DF][DF][DF][b]–– Dial legend:[/b]",
+    "txlegende": "[DF]☉ Sun, ● Moon (with phases)[~LF][~LF]♀ Venus (pearly), ♂ Mars (reddish), ♃ Jupiter (banded), ♄ Saturn (with rings), ☿ Mercury (grey)[~LF][~LF][s] Sirius, [k] Canopus, [f] Alpha Centauri, [a] Arcturus, [w] Vega, [c] Capella, [r] Rigel, [p] Procyon, [b] Betelgeuse, [h] Achernar[DF][DF][DF]",
+    "txlegende0": "[b]–– Explanations:[/b][~LF][~LF]The light season of the year divides the year into eight phases of waxing and waning light: 1. {solcal_lph|0}/ ascent (approx. 4.2–5.5), 2a. {solcal_lph|1} (6–20.5), 2b. {solcal_lph|2} (21.5–21.7), 2c. {solcal_lph|3} (22.7–6.8), 3. {solcal_lph|4}/ decline (7.8–6.11), 4a. {solcal_lph|5} (7–21.11), 4b. {solcal_lph|6} (22.11–19.1) and 4c. {solcal_lph|7} (20.1–3.2). Short: Φx·y with x = light season, y =[SP]% progress. – The dates follow astronomical points and may deviate slightly from the civil calendar.[~LF][~LF]The moon date works like our calendar date, but with nights instead of days: Μx·y (p/z), with x = lunar “month” of the year, y = night of that lunar month. Because lunar months differ in length, z gives the total number of nights in the lunar month, and p the full-moon night. The night ends at sunrise.[DF][DF][DF]",
+    "buttonsolcal": "Light calendar",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
     "char_consonants": "bcdfghjklmnpqrstvwxyzñÑ",
     "char_splitafter": ".,;:!?“‘”-—)]}%&*+=/\\|>@#_×÷≈≠≤≥°¶•…”’»`",
@@ -224,5 +215,19 @@
     "txchangelog": "What's new?",
     "txanleitung4": "[DF]Data is neither collected nor transmitted. Everything remains on your device. An internet connection is not even required for operation. One exception: if a programme error occurs, an anonymous error message will be sent if you have an internet connection (see privacy policy for details). This helps to ensure that Sun Clock runs smoothly.[~LF][~LF]If you find an error, I will be happy to correct it. To do so, I need a clear error report (possibly with a screenshot) and a brief description of where and when the error occurred. A screenshot of the status log below, taken as soon as possible after the error occurred, is also helpful (email contact: [CONTACTSUPPORT]). In 99% of cases, reports of supposed calculation errors are false alarms – unfortunately, there is a lot of misinformation about star calculations.[~LF][~LF]Thanks to: Brandon Rhodes (Skyfield), Rolf, Greg Miller and all testers. Images of celestial bodies provided by: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble Space Telescope and NASA / JPL-Caltech (public domain). A list of all third-party materials and licences used can be found in the file ‘design/ COPYRIGHT.txt’.[~LF][~LF]I am providing you with ‘Sun Clock’ free of charge. Simply enjoy it. If you would like to express your appreciation for my work, you can find my website here:[DF][DF]",
     "txkaffee": "Visit website",
+    "solcalmonthsxx": [
+        "% New Febru",
+        "% New March",
+        "% New April",
+        "% New May",
+        "% New June",
+        "% New July",
+        "% New Augus",
+        "% New Septe",
+        "% New Octo",
+        "% New Nove",
+        "% New Dece",
+        "% New Janu"
+    ],
     "XXEOF": ""
 }
