--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.4",
-        "updated": "2025-12-06 23:17:43"
+        "version": "1.5.6",
+        "updated": "2025-12-12 15:28:14"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -22,25 +22,16 @@
         "Sáb",
         "Dom"
     ],
-    "solcalmonthsxx": [
-        "% nuevo febr",
-        "% nuevo marzo",
-        "% nuevo abril",
-        "% nuevo mayo",
-        "% nuevo junio",
-        "% nuevo julio",
-        "% nuevo agos",
-        "% nuevo sept",
-        "% nuevo octu",
-        "% nuevo novi",
-        "% nuevo dici",
-        "% nuevo enero"
-    ],
-    "solcalseasons": [
-        "Preprimavera",
-        "Verano temprano",
-        "Otoño temprano",
-        "Invierno temprano"
+    "lighttime": "[DF]Tiempo de luz",
+    "solcal_lph": [
+        "Creciente (%)",
+        "Llegada a la luz (%)",
+        "Reposo de luz (%)",
+        "Despedida de la luz (%)",
+        "Menguante (%)",
+        "Llegada a la oscuridad (%)",
+        "Reposo de oscuridad (%)",
+        "Despedida de la oscuridad (%)"
     ],
     "moon": "Luna",
     "xxdays": {
@@ -124,10 +115,10 @@
     "txmore": "[DF]{txfullscr} evita que se apague la pantalla: por ejemplo, le he colgado a mi sobrina una vieja [i]tableta[/i] con «reloj de sol» en la pared. Con {txuhrsinn} se puede determinar si el reloj gira en el sentido de las agujas del reloj (sur) o en sentido contrario. Si cambia el sentido de giro, la parte del círculo solar que se encuentra por debajo del horizonte quedará delante de usted (para más detalles, véase la página siguiente). [~LF][~LF]{txfarben} selecciona diferentes esferas. {txnachtmodus} {auto} cambia al atardecer, -6° al final del crepúsculo, +6° antes. - Si sus ajustes no se aplican, pulse el botón de actualización en la parte inferior derecha de la esfera. [~LF][~LF]Puede ampliar la esfera con dos dedos (o con un triple toque). Si desea mover la imagen ampliada, hágalo lentamente. Los movimientos rápidos le llevarán a la página siguiente. - En la página siguiente encontrará una explicación de la esfera.[DF][DF][DF]",
     "txdata": "[DF]Datos",
     "txlocdata": "[DF]Los cálculos del Reloj de sol de Gordon para su ubicación específica deben coincidir con el almanaque astronómico con una precisión de 0,0005 segundos de arco³:[DF]",
-    "txobjdata": "– Sol¹ –[~LF]Hora: {clocktm}[~LF]Hora temporal: {temptm}[~LF]Calendario solar: {cal_gordon}[~LF]Día de luz: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– Luna² –[~LF]Luna llena: {moon_full} [~LF]Luna nueva: {moon_new}[~LF]Calendario solar: {moon_gordon}[~LF]Iluminada: {moon_illum}[~LF]Tamaño: {moon_sizep} (85-100)[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]Explicación: ¹ Hora: GPS = sincronizada | Hora temporal: «ἡ» hora desigual (0,0[NDASH]11,9) del día o «ν» de la noche. Orientado al cumplimiento: p. ej., la sexta hora comienza a las 5,1, pero se proclamó a las 6,0 (= a partir de la sexta hora). «φ» Vigilia nocturna con «minutos» desiguales (0φ00[NDASH]3φ59) | Calendario solar: información en el botón de abajo | Día luminoso y Agnihotra: Salida[NDASH]Puesta hoy [Salida mañana], ⁺ = GPS actual | ² Luna llena y luna nueva: hora (en/antes de días) | ³ La luna tiene un tamaño aproximado de 2000 segundos de arco[DF][DF]",
-    "buttonsolcal": "Calendario solar",
-    "txlegende0": "[b]–– Leyenda:[/b]",
-    "txlegende": "[DF]☉ Sol, ● Luna (con fases)[~LF][~LF]♀ Venus (color perla), ♂ Marte (rojizo), ♃ Júpiter (rayado), ♄ Saturno (con anillos), ☿ Mercurio (gris)[~LF][~LF][s] Sirio, [k] Canopus, [f] Alfa Centauri, [a] Arcturus, [w] Vega, [c] Capella, [r] Rigel, [p] Procyon, [b] Betelgeuse, [h] Achernar[DF][DF][DF][DF]",
+    "txobjdata": "– Sol¹ –[~LF]Hora: {clocktm}[~LF]Hora temporal: {temptm}[~LF]Día de luz: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF]Solsticio: {sun_soli}[~LF]Equinoccio: {sun_equi}{sun_lighttime}[~LF][~LF]– Luna² –[~LF]Luna nueva: {moon_new}[~LF]Luna llena: {moon_full}[~LF]Noche lunar: {moon_gordon}[~LF]Iluminada: {moon_illum}[~LF]Tamaño: {moon_sizep} (85-100)[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]¹ Hora: GPS = sincronizada | Hora temporal: hora local desigual (0,0[NDASH]11,9) ‘ἡ’ del día o ‘ν’ de la noche. ‘φ’ vigilia nocturna con “minutos” desiguales (0φ00[NDASH]3φ59) | {lighttime-}: véase más abajo | Día de luz y Agnihotra: salida[NDASH]puesta de hoy [salida de mañana], ⁺ = GPS actual | ² Luna llena y nueva: momento (en/antes de días) | Noche lunar: véase más abajo | ³ La Luna mide aprox. 2000 segundos de arco[DF][DF][DF][b]–– Leyenda de la esfera:[/b]",
+    "txlegende": "[DF]☉ Sol, ● Luna (con fases)[~LF][~LF]♀ Venus (nacarada), ♂ Marte (rojizo), ♃ Júpiter (listado), ♄ Saturno (con anillos), ☿ Mercurio (gris)[~LF][~LF][s] Sirio, [k] Canopo, [f] Alfa Centauri, [a] Arturo, [w] Vega, [c] Capella, [r] Rigel, [p] Proción, [b] Betelgeuse, [h] Achernar[DF][DF][DF]",
+    "txlegende0": "[b]–– Explicaciones:[/b][~LF][~LF]La estación de luz del año divide el año en ocho fases de aumento y disminución de la luz: 1. {solcal_lph|0}/ ascenso (aprox. 4.2–5.5), 2a. {solcal_lph|1} (6–20.5), 2b. {solcal_lph|2} (21.5–21.7), 2c. {solcal_lph|3} (22.7–6.8), 3. {solcal_lph|4}/ descenso (7.8–6.11), 4a. {solcal_lph|5} (7–21.11), 4b. {solcal_lph|6} (22.11–19.1) y 4c. {solcal_lph|7} (20.1–3.2). En breve: Φx·y con x = temporada de luz, y =[SP]% de progreso. – Las fechas se basan en puntos astronómicos y pueden desviarse ligeramente del calendario civil.[~LF][~LF]La fecha lunar funciona como nuestra fecha, pero con noches en lugar de días: Μx·y (p/z), donde x = “mes” lunar del año, y = noche del mes lunar. Como los meses lunares tienen distinta longitud, z indica el número total de noches del mes lunar y p la noche de luna llena. La noche termina al amanecer.[DF][DF][DF]",
+    "buttonsolcal": "Calendario de luz",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
     "char_consonants": "bcdfghjklmnpqrstvwxyzñÑ",
     "char_splitafter": ".,;:!?“‘”-—)]}%&*+=/\\|>@#_×÷≈≠≤≥°¶•…”’»`",
@@ -200,5 +191,19 @@
     "txchangelog": "¿Qué hay de nuevo?",
     "txanleitung4": "[DF] No se recopilan ni envían datos. Todo permanece en su dispositivo. Ni siquiera se necesita una conexión a Internet para su funcionamiento. Una excepción: si se produce un error en el programa, se enviará un mensaje de error anónimo (para más detalles, consulte la política de privacidad) si dispone de conexión a Internet. De este modo, contribuirá al buen funcionamiento de Reloj de sol.[~LF][~LF]Si encuentra un error, estaré encantado de corregirlo. Para ello, necesito un informe claro del error (posiblemente con una captura de pantalla) y una breve descripción de dónde y cuándo se produjo el error. También es útil una captura de pantalla del registro de estado que aparece a continuación, a ser posible inmediatamente después de que se produzca el error (contacto por correo electrónico: [CONTACTSUPPORT]). Las indicaciones sobre supuestos errores de cálculo son, en el 99 % de los casos, informes falsos; lamentablemente, hay mucha información errónea sobre el cálculo de las estrellas.[~LF][~LF]Agradecimientos a: Brandon Rhodes (Skyfield), Rolf, Greg Miller y todos los probadores. Imágenes de los cuerpos celestes proporcionadas por: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Telescopio espacial Hubble y NASA / JPL-Caltech (dominio público). Encontrará una lista de todos los materiales de terceros utilizados y las licencias en el archivo «design/ COPYRIGHT.txt».[~LF][~LF]Le ofrezco «Reloj de sol» de forma gratuita. Simplemente disfrútelo. Si desea expresar su agradecimiento por mi trabajo, aquí encontrará mi página web:[DF][DF]",
     "txkaffee": "Ir a la página web",
+    "solcalmonthsxx": [
+        "% nuevo febr",
+        "% nuevo marzo",
+        "% nuevo abril",
+        "% nuevo mayo",
+        "% nuevo junio",
+        "% nuevo julio",
+        "% nuevo agos",
+        "% nuevo sept",
+        "% nuevo octu",
+        "% nuevo novi",
+        "% nuevo dici",
+        "% nuevo enero"
+    ],
     "XXEOF": ""
 }
