--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.4",
-        "updated": "2025-12-06 23:17:43"
+        "version": "1.5.6",
+        "updated": "2025-12-12 15:28:14"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -22,25 +22,16 @@
         "Сб",
         "Вс"
     ],
-    "solcalmonthsxx": [
-        "% Новофев",
-        "% Новомар",
-        "% Новоапр",
-        "% Новомай",
-        "% Новоиюн",
-        "% Новойюл",
-        "% Новоавг",
-        "% Новосен",
-        "% Новоокт",
-        "% Новоноя",
-        "% Новодек",
-        "% Новоян"
-    ],
-    "solcalseasons": [
-        "Предвесна",
-        "Раннее лето",
-        "Ранняя осень",
-        "Ранняя зима"
+    "lighttime": "[DF]Светлый сезон",
+    "solcal_lph": [
+        "Нарастание (%)",
+        "Прибытие в свет (%)",
+        "Светлый покой (%)",
+        "Прощание со светом (%)",
+        "Убывание (%)",
+        "Прибытие во тьму (%)",
+        "Тёмный покой (%)",
+        "Прощание с тьмой (%)"
     ],
     "moon": "Луна",
     "xxdays": {
@@ -126,10 +117,10 @@
     "txmore": "[DF]{txfullscr} предотвращает выключение экрана: например, я повесил старый [i]планшет[/i] с «Солнечными часами» на стену для племянницы. С помощью {txuhrsinn} вы задаёте, движется ли стрелка по часовой (юг) или против. При смене направления часть солнечного круга под горизонтом оказывается перед вами (подробности на следующей странице).[~LF][~LF]{txfarben} выбирает разные циферблаты. {txnachtmodus} {auto} переключается на закате, -6° — к концу сумерек, +6° — до них. — Если настройки не применяются, нажмите кнопку обновления в правом нижнем углу циферблата.[~LF][~LF]В циферблат можно зумить двумя пальцами (или тройным тапом). Чтобы сдвинуть увеличенное изображение, делайте это медленно. Быстрые движения перелистывают страницу. — На следующей странице объяснение циферблата.[DF][DF][DF]",
     "txdata": "[DF]Данные",
     "txlocdata": "[DF]Расчёты «Солнечных часов Гордона» для вашего местоположения должны совпадать с астрономическим альманахом с точностью до 0,0005 угловых секунд³:[DF]",
-    "txobjdata": "– Солнце¹ –[~LF]Время: {clocktm}[~LF]Временной час: {temptm}[~LF]Солнечный календарь: {cal_gordon}[~LF]Дневной свет: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– Луна² –[~LF]Полнолуние: {moon_full} [~LF]Новолуние: {moon_new}[~LF]Солнечный календарь: {moon_gordon}[~LF]Освещенность: {moon_illum}[~LF]Размер: {moon_sizep} (85-100)[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]Пояснение: ¹ Время: GPS = синхронизировано | Временной час: «ἡ» неравный час (0,0[NDASH]11,9) дня или «ν» ночи. Ориентировано на завершение: например, шестой час начинается в 5,1, но был объявлен в 6,0 (= с 6-го часа). «φ» Ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | Солнечный календарь: информация см. кнопку внизу | Светлый день и Агнихотра: Восход[NDASH]Закат сегодня [Восход завтра], ⁺ = текущее GPS | ² Полнолуние и новолуние: время (в/до дней) | ³ Луна имеет размер около 2000 угловых секунд[DF][DF]",
-    "buttonsolcal": "Солнечный календарь",
-    "txlegende0": "[b]–– Легенда:[/b]",
-    "txlegende": "[DF]☉ Солнце, ● Луна (с фазами)[~LF][~LF]♀ Венера (перламутровая), ♂ Марс (красноватый), ♃ Юпитер (полосатый), ♄ Сатурн (с кольцами), ☿ Меркурий (серый)[~LF][~LF][s] Сириус, [k] Канопус, [f] Альфа Центавра, [a] Арктур, [w] Вега, [c] Капелла, [r] Ригель, [p] Процион, [b] Бетельгейзе, [h] Ахернар[DF][DF][DF][DF]",
+    "txobjdata": "– Солнце¹ –[~LF]Время: {clocktm}[~LF]Темпоральный час: {temptm}[~LF]Световой день: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF]Солнцестояние: {sun_soli}[~LF]Равноденствие: {sun_equi}{sun_lighttime}[~LF][~LF]– Луна² –[~LF]Новолуние: {moon_new}[~LF]Полнолуние: {moon_full}[~LF]Лунная ночь: {moon_gordon}[~LF]Освещённость: {moon_illum}[~LF]Размер: {moon_sizep} (85-100)[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]¹ Время: GPS = синхронизировано | Темпоральный час: местный неравный час (0,0[NDASH]11,9), ‘ἡ’ для дня и ‘ν’ для ночи. ‘φ’ ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | {lighttime-}: см. ниже | Световой день и Агнихотра: восход[NDASH]закат сегодня [восход завтра], ⁺ = текущий GPS | ² Полная и новая Луна: момент (через/до скольких дней) | Лунная ночь: см. ниже | ³ Диаметр Луны ≈ 2000 угловых секунд[DF][DF][DF][b]–– Условные обозначения циферблата:[/b]",
+    "txlegende": "[DF]☉ Солнце, ● Луна (с фазами)[~LF][~LF]♀ Венера (перламутровая), ♂ Марс (красноватый), ♃ Юпитер (полосатый), ♄ Сатурн (с кольцами), ☿ Меркурий (серый)[~LF][~LF][s] Сириус, [k] Канопус, [f] Альфа Центавра, [a] Арктур, [w] Вега, [c] Капелла, [r] Ригель, [p] Процион, [b] Бетельгейзе, [h] Ахернар[DF][DF][DF]",
+    "txlegende0": "[b]–– Пояснения:[/b][~LF][~LF]Световой сезон года делит год на восемь фаз нарастающего и убывающего света: 1. {solcal_lph|0}/ подъём (примерно 4.2–5.5), 2a. {solcal_lph|1} (6–20.5), 2b. {solcal_lph|2} (21.5–21.7), 2c. {solcal_lph|3} (22.7–6.8), 3. {solcal_lph|4}/ спад (7.8–6.11), 4a. {solcal_lph|5} (7–21.11), 4b. {solcal_lph|6} (22.11–19.1) и 4c. {solcal_lph|7} (20.1–3.2). Кратко: Φx·y, где x = световое время, y =[SP]% прогресса. – Даты опираются на астрономические точки и могут немного отличаться от гражданского календаря.[~LF][~LF]Лунная дата работает как наша календарная дата, но с ночами вместо дней: Μx·y (p/z), где x = «лунный месяц» года, y = ночь в этом лунном месяце. Так как длительность лунных месяцев различна, z даёт общее число ночей в лунном месяце, а p – ночь полнолуния. Ночь заканчивается на восходе солнца.[DF][DF][DF]",
+    "buttonsolcal": "Световой календарь",
     "char_vowels": "аеёиоуыэюяАЕЁИОУЫЭЮЯ",
     "char_consonants": "бвгджзйклмнпрстфхцчшщБВГДЖЗЙКЛМНПРСТФХЦЧШЩ",
     "char_splitafter": ".,;:!?“‘”-—)]}%&*+=/\\|>@#_×÷≈≠≤≥°¶•…”’»`",
@@ -197,5 +188,19 @@
     "txchangelog": "Что нового?",
     "txanleitung4": "[DF]Данные ни собираются, ни отправляются. Всё остаётся на вашем устройстве. Для работы не требуется даже подключение к интернету. Исключение: при ошибке программы, если у вас есть интернет, отправляется анонимное сообщение об ошибке (подробности см. в политике конфиденциальности). Так вы помогаете, чтобы «Солнечные часы» работали без сбоев.[~LF][~LF]Если вы нашли ошибку, я с радостью её исправлю. Для этого нужен чёткий отчёт об ошибке (возможно, со скриншотом) и краткое описание, где и когда она произошла. Полезен также скриншот журнала статуса внизу сразу после возникновения ошибки (контакт по почте: [CONTACTSUPPORT]). Сообщения о якобы ошибках в расчётах в 99 % случаев ложные — к сожалению, в интернете много неверной информации о звёздных расчётах.[~LF][~LF]Благодарность: Брэндон Роудс (Skyfield), Рольф, Грег Миллер и все тестеры. Изображения небесных тел предоставлены: NASA / SOHO (Solar and Heliospheric Observatory), ESA / Hubble Space Telescope и NASA / JPL-Caltech (общественное достояние). Полный список всех используемых материалов третьих сторон и лицензий находится в файле \"design/COPYRIGHT.txt\".[~LF][~LF]Я предоставляю вам «Солнечные часы» бесплатно. Просто наслаждайтесь ими. Если вы хотите выразить признательность за мою работу, вот моя веб-страница:[DF][DF]",
     "txkaffee": "На веб-страницу",
+    "solcalmonthsxx": [
+        "% Новофев",
+        "% Новомар",
+        "% Новоапр",
+        "% Новомай",
+        "% Новоиюн",
+        "% Новойюл",
+        "% Новоавг",
+        "% Новосен",
+        "% Новоокт",
+        "% Новоноя",
+        "% Новодек",
+        "% Новоян"
+    ],
     "XXEOF": ""
 }
