--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.4",
-        "updated": "2025-12-06 23:17:43"
+        "version": "1.5.6",
+        "updated": "2025-12-12 15:28:14"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -22,25 +22,16 @@
         "周六",
         "周日"
     ],
-    "solcalmonthsxx": [
-        "新二月%天",
-        "新三月%天",
-        "新四月%天",
-        "新五月%天",
-        "新六月%天",
-        "新七月%天",
-        "新八月%天",
-        "新九月%天",
-        "新十月%天",
-        "新十一月%天",
-        "新十二月%天",
-        "新一月%天"
-    ],
-    "solcalseasons": [
-        "早春期",
-        "初夏",
-        "初秋",
-        "初冬"
+    "lighttime": "[DF]光之季",
+    "solcal_lph": [
+        "光增 (%)",
+        "进入光明 (%)",
+        "光之静息 (%)",
+        "告别光明 (%)",
+        "光减 (%)",
+        "进入黑暗 (%)",
+        "暗之静息 (%)",
+        "告别黑暗 (%)"
     ],
     "moon": "月",
     "xxdays": {
@@ -137,10 +128,10 @@
     "txmore": "[DF]{txfullscr} 可防止屏幕关闭：例如，我给侄女挂了一块旧的 [i]平板电脑[/i]，上面装有“日晷”。使用 {txuhrsinn}，您可以设置时钟是顺时针（南）还是逆时针运行。如果更改旋转方向，太阳圈低于地平线的部分就会出现在您面前（详情见下一页）。[~LF][~LF]{txfarben} 可选择不同的表盘。{txnachtmodus} {auto} 在日落时切换，-6° 为黄昏结束时，+6° 为黄昏开始时。- 如果您的设置未被采用，请点击表盘右下角的更新按钮。[~LF][~LF]您可以使用两根手指（或三连击）放大表盘。如果您想移动放大的图像，请缓慢操作。快速移动会切换到下一页。- 下一页提供了表盘的说明。[DF][DF][DF]",
     "txdata": "[DF]数据",
     "txlocdata": "[DF]根据Gordon-太阳时钟对您所在位置的计算结果应与天文年历上的数据一致，误差不超过 0.0005 角秒³：[DF]",
-    "txobjdata": "– 太阳¹ –[~LF]时间：{clocktm}[~LF]临时小时：{temptm}[~LF]太阳历： {cal_gordon}[~LF]光明日：{sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF][~LF]– 月亮² –[~LF]满月：{moon_full} [~LF]新月：{moon_new}[~LF]太阳历：{moon_gordon}[~LF]照明：{moon_illum}[~LF]大小：{moon_sizep} (85-100)[~LF][~LF]– 亮度 –[~LF]金星： {venus_magp} (83-100)[~LF]火星：{mars_magp} (52-100)[~LF]木星：{jupiter_magp} (87-100)[~LF]土星：{saturn_magp} (77-100)[~LF]水星：{merkur_magp} (0-100)[~LF][~LF]说明：¹ 时间：GPS = 同步 | 时间小时：“ἡ”为白天或夜间的不等小时（0,0[NDASH]11,9）。以完成为基准：例如，第六小时从 5.1 开始，但在 6.0 时宣布（= 从第 6 小时开始）。“φ”夜间守夜，不均匀的“分钟”（0φ00[NDASH]3φ59）| 阳历：信息参见下方按钮 | 光明日与阿格尼霍特拉： 日出[NDASH]日落今天 [日出明天]， ⁺ = 当前 GPS | ² 满月和新月：时间（以天为单位）| ³ 月球大小约为 2000 角秒[DF][DF]",
-    "buttonsolcal": "太阳历",
-    "txlegende0": "[b]–– 图例：[/b]",
-    "txlegende": "[DF]☉ 太阳, ● 月亮（带相位）[~LF][~LF]♀ 金星（珍珠色）, ♂ 火星（红色）, ♃ 木星（条纹）, ♄ 土星（带环）, ☿ 水星（灰色）[~LF][~LF][s] 天狼星, [k] 老人星, [f] 半人马座α, [a] 大角星, [w] 织女星, [c] 五车二, [r] 参宿七, [p] 南河三, [b] 参宿四, [h] 水委一[DF][DF][DF][DF]",
+    "txobjdata": "– 太阳¹ –[~LF]时间: {clocktm}[~LF]时段: {temptm}[~LF]光日: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]昼夜平分点: {sun_equi}{sun_lighttime}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]被照亮: {moon_illum}[~LF]视直径: {moon_sizep} (85-100)[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时间: GPS = 已同步 | 时段: 本地不等时 (0.0[NDASH]11.9)，白昼用 ‘ἡ’，黑夜用 ‘ν’ 表示。‘φ’ 为夜间守望，不等“分钟” (0φ00[NDASH]3φ59) | {lighttime-}: 见下文 | 光日与 Agnihotra: 今日日出[NDASH]日落 [明日日出]，⁺ = 当前 GPS | ² 新月与满月: 时刻（还有/之前多少天） | 月夜: 见下文 | ³ 月面视直径约为 2000 角秒[DF][DF][DF][b]–– 表盘图例:[/b]",
+    "txlegende": "[DF]☉ 太阳，● 月亮（含月相）[~LF][~LF]♀ 金星（珠光色），♂ 火星（微红），♃ 木星（带状纹），♄ 土星（有光环），☿ 水星（灰色）[~LF][~LF][s] 天狼星，[k] 老人星 (Canopus)，[f] 半人马座α星，[a] 大角星 (Arcturus)，[w] 织女星 (Vega)，[c] 五车二 (Capella)，[r] 参宿七 (Rigel)，[p] 南河三 (Procyon)，[b] 参宿四 (Betelgeuse)，[h] 波江座α星 (Achernar)[DF][DF][DF]",
+    "txlegende0": "[b]–– 说明：[/b][~LF][~LF]一年中的“光之季节”把一年分成八个光线渐强、渐弱的阶段：1. {solcal_lph|0}/ 上升（约 4.2–5.5），2a. {solcal_lph|1} (6–20.5)，2b. {solcal_lph|2} (21.5–21.7)，2c. {solcal_lph|3} (22.7–6.8)，3. {solcal_lph|4}/ 减弱 (7.8–6.11)，4a. {solcal_lph|5} (7–21.11)，4b. {solcal_lph|6} (22.11–19.1)，4c. {solcal_lph|7} (20.1–3.2)。简写：Φx·y，其中 x = 光之时，y =[SP]% 进度。– 这些日期基于天文节点，因此可能与常规日历略有出入。[~LF][~LF]“月日”与我们的日期类似，只是以“夜”代替“日”：Μx·y (p/z)，其中 x = 该年的“月月”，y = 该月中的第几夜。由于各个朔望月长短不同，z 表示该月的夜数总和，p 表示满月之夜。夜晚在日出时结束。[DF][DF][DF]",
+    "buttonsolcal": "光照日历",
     "char_vowels": "",
     "char_consonants": "",
     "char_splitafter": "，：、。.,;:!?“‘”-—)]}%&*+=/\\|>@#_×÷≈≠≤≥°¶•…”’»`",
@@ -160,5 +151,19 @@
     "txchangelog": "有什么新功能？",
     "txanleitung4": "[DF]数据不会被收集或发送。所有数据都保存在您的设备上。运行时甚至不需要互联网连接。例外情况：如果出现程序错误，当您连接互联网时，会发送一条匿名错误报告（详情请参阅数据保护政策）。这有助于确保 Sonnenuhr 的正常运行。[~LF][~LF]如果您发现了错误，我将很乐意为您更正。为此，我需要您提供清晰的错误报告（可能需要附上屏幕截图）以及错误发生的时间和地点的简要描述。在错误发生后，尽可能立即提供下方状态日志的屏幕截图也会很有帮助（电子邮件联系：[CONTACTSUPPORT]）。99% 的计算错误报告都是错误报告——遗憾的是，关于恒星计算的信息存在许多错误。[~LF][~LF]感谢：Brandon Rhodes（Skyfield）、Rolf、Greg Miller 以及所有测试人员。天体图片由以下机构提供：NASA / SOHO（太阳和日球观测站）、ESA / 哈勃太空望远镜和 NASA / JPL-Caltech（公共领域）。所有使用的第三方材料和许可信息，请参见文件“design/ COPYRIGHT.txt”。[~LF][~LF]我免费为您提供“日晷”软件。请尽情享受它带来的乐趣。如果您想表达对我的工作的感谢，请访问我的网站：[DF][DF]",
     "txkaffee": "访问网站",
+    "solcalmonthsxx": [
+        "新二月%天",
+        "新三月%天",
+        "新四月%天",
+        "新五月%天",
+        "新六月%天",
+        "新七月%天",
+        "新八月%天",
+        "新九月%天",
+        "新十月%天",
+        "新十一月%天",
+        "新十二月%天",
+        "新一月%天"
+    ],
     "XXEOF": ""
 }
