--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.6",
-        "updated": "2025-12-12 15:28:14"
+        "version": "1.5.7",
+        "updated": "2025-12-12 15:44:18"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -117,7 +117,7 @@
     "txlocdata": "[DF]Berechnungen von Gordons Sonnenuhr für Ihren individuellen Standort sollten mit dem astronomischen Almanach auf 0,0005 Bogensekunden übereinstimmen³:[DF]",
     "txobjdata": "– Sonne¹ –[~LF]Uhrzeit: {clocktm}[~LF]Temporalstunde: {temptm}[~LF]Lichttag: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF]Sonnenwende: {sun_soli}[~LF]Nachtgleiche: {sun_equi}{sun_lighttime}[~LF][~LF]– Mond² –[~LF]Neumond: {moon_new}[~LF]Vollmond: {moon_full}[~LF]Mondnacht: {moon_gordon}[~LF]Beleuchtet: {moon_illum}[~LF]Größe: {moon_sizep} (85-100)[~LF][~LF]– Helligkeit –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Merkur: {merkur_magp} (0-100)[~LF][~LF]¹ Uhrzeit: GPS = synchronisiert | Temporalstunde: lokale, ungleiche Stunde (0,0[NDASH]11,9) „ἡ“ des Tages oder „ν“ der Nacht. „φ“ Nachtwache mit ungleichen „Minuten“ (0φ00[NDASH]3φ59) | {lighttime-}: s.u. | Lichttag & Agnihotra: Aufgang[NDASH]Untergang heute [Aufgang morgen], ⁺ = aktuelles GPS | ² Voll- und Neumond: Zeitpunkt (in/vor Tagen) | Mondnacht: s.u. | ³ Mond ist ca. 2000 Bogensek. groß[DF][DF][DF][b]–– Legende Ziffernblatt:[/b]",
     "txlegende": "[DF]☉ Sonne, ● Mond (mit Phasen)[~LF][~LF]♀ Venus (perlenfarben), ♂ Mars (rötlich), ♃ Jupiter (gestreift), ♄ Saturn (mit Ringen), ☿ Merkur (grau)[~LF][~LF][s] Sirius, [k] Canopus, [f] Alpha Centauri, [a] Arktur, [w] Wega, [c] Capella, [r] Rigel, [p] Prokyon, [b] Beteigeuze, [h] Achernar[DF][DF][DF]",
-    "txlegende0": "[b]–– Erklärungen:[/b][~LF][~LF]Die Lichtjahreszeit teilt das Jahr in acht Phasen zunehmenden und abnehmenden Lichts: 1. {solcal_lph|0}/ Anstieg (ca. 4.2.–5.5.), 2a. {solcal_lph|1} (6.–20.5.), 2b. {solcal_lph|2} (21.5.–21.7.), 2c. {solcal_lph|3} (22.7.–6.8.), 3. {solcal_lph|4} (7.8.–6.11.), 4a. {solcal_lph|5} (7.–21.11.), 4b. {solcal_lph|6} (22.11.–19.1.) und 4c. {solcal_lph|7} (20.1.–3.2.). Kurz: Φx·y mit x = Lichtzeit, y =[SP]%-Fortschritt. - Daten orientieren sich an astronomischen Punkten und können vom Kalender leicht abweichen.[~LF][~LF]Monddatum funktioniert wie unser Datum, aber mit Nächten statt Tagen: Μx·y (p/z) mit x = Mond„monat“ des Jahrs, y = Nacht des Mondmonats. Da Mondmonate verschieden lang sind, gibt z die Gesamtnächte des Mondmonats an, p die Vollmondnacht. Die Nacht endet bei Sonnenaufgang.[DF][DF][DF]",
+    "txlegende0": "[b]–– Erklärungen:[/b][~LF][~LF]Die Lichtjahreszeit teilt das Jahr in acht Phasen zunehmenden und abnehmenden Lichts: 1. {solcal_lph|0} (4.2.–5.5.), 2a. {solcal_lph|1} (6.5.–20.5.), 2b. {solcal_lph|2} (21.5.–21.7.), 2c. {solcal_lph|3} (22.7.–6.8.), 3. {solcal_lph|4} (7.8.–6.11.), 4a. {solcal_lph|5} (7.11.–21.11.), 4b. {solcal_lph|6} (22.11.–19.1.) und 4c. {solcal_lph|7} (20.1.–3.2.). Kurz: Φx·y mit x = Lichtzeit, y =[SP]%-Fortschritt. - Daten orientieren sich an astronomischen Punkten und können vom Kalender leicht abweichen.[~LF][~LF]Monddatum funktioniert wie unser Datum, aber mit Nächten statt Tagen: Μx·y (p/z) mit x = Mond„monat“ des Jahrs, y = Nacht des Mondmonats. Da Mondmonate verschieden lang sind, gibt z die Gesamtnächte des Mondmonats an, p die Vollmondnacht. Die Nacht endet bei Sonnenaufgang.[DF][DF][DF]",
     "buttonsolcal": "Lichtkalender",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
     "char_consonants": "bcdfghjklmnpqrstvwxyzñÑ",
