--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.5.6",
-        "updated": "2025-12-12 15:28:14"
+        "version": "1.5.7",
+        "updated": "2025-12-12 15:44:18"
     },
     "txwelcome": "Welcome",
     "quotes": [
@@ -123,7 +123,7 @@
     "txlocdata": "[DF]Calculations from Gordon's Sun Clock for your specific location should match the astronomical almanac to within 0.0005 arc seconds³:[DF]",
     "txobjdata": "– Sun¹ –[~LF]Time: {clocktm}[~LF]Temporal hour: {temptm}[~LF]Light day: {sun_daylight}{sun_agnicountdown}{sun_agnihotra}[~LF]Solstice: {sun_soli}[~LF]Equinox: {sun_equi}{sun_lighttime}[~LF][~LF]– Moon² –[~LF]New moon: {moon_new}[~LF]Full moon: {moon_full}[~LF]Moon night: {moon_gordon}[~LF]Illuminated: {moon_illum}[~LF]Size: {moon_sizep} (85-100)[~LF][~LF]– Brightness –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Mercury: {merkur_magp} (0-100)[~LF][~LF]¹ Time: GPS = synchronised | Temporal hour: local unequal hour (0.0[NDASH]11.9) ‘ἡ’ of the day or ‘ν’ of the night. ‘φ’ night watch with unequal “minutes” (0φ00[NDASH]3φ59) | {lighttime-}: see below | Light day & Agnihotra: rise[NDASH]set today [rise tomorrow], ⁺ = current GPS | ² Full and new moon: moment (in/before days) | Moon night: see below | ³ Moon is approx. 2000 arcseconds in size[DF][DF][DF][b]–– Dial legend:[/b]",
     "txlegende": "[DF]☉ Sun, ● Moon (with phases)[~LF][~LF]♀ Venus (pearly), ♂ Mars (reddish), ♃ Jupiter (banded), ♄ Saturn (with rings), ☿ Mercury (grey)[~LF][~LF][s] Sirius, [k] Canopus, [f] Alpha Centauri, [a] Arcturus, [w] Vega, [c] Capella, [r] Rigel, [p] Procyon, [b] Betelgeuse, [h] Achernar[DF][DF][DF]",
-    "txlegende0": "[b]–– Explanations:[/b][~LF][~LF]The light season of the year divides the year into eight phases of waxing and waning light: 1. {solcal_lph|0}/ ascent (approx. 4.2–5.5), 2a. {solcal_lph|1} (6–20.5), 2b. {solcal_lph|2} (21.5–21.7), 2c. {solcal_lph|3} (22.7–6.8), 3. {solcal_lph|4}/ decline (7.8–6.11), 4a. {solcal_lph|5} (7–21.11), 4b. {solcal_lph|6} (22.11–19.1) and 4c. {solcal_lph|7} (20.1–3.2). Short: Φx·y with x = light season, y =[SP]% progress. – The dates follow astronomical points and may deviate slightly from the civil calendar.[~LF][~LF]The moon date works like our calendar date, but with nights instead of days: Μx·y (p/z), with x = lunar “month” of the year, y = night of that lunar month. Because lunar months differ in length, z gives the total number of nights in the lunar month, and p the full-moon night. The night ends at sunrise.[DF][DF][DF]",
+    "txlegende0": "[b]–– Explanations:[/b][~LF][~LF]The light season of the year divides the year into eight phases of waxing and waning light: 1. {solcal_lph|0} (4.2–5.5), 2a. {solcal_lph|1} (6.5–20.5), 2b. {solcal_lph|2} (21.5–21.7), 2c. {solcal_lph|3} (22.7–6.8), 3. {solcal_lph|4} (7.8–6.11), 4a. {solcal_lph|5} (7.11–21.11), 4b. {solcal_lph|6} (22.11–19.1) and 4c. {solcal_lph|7} (20.1–3.2). Short: Φx·y with x = light season, y =[SP]% progress. – The dates follow astronomical points and may deviate slightly from the civil calendar.[~LF][~LF]The moon date works like our calendar date, but with nights instead of days: Μx·y (p/z), with x = lunar ‘month’ of the year, y = night of that lunar month. Because lunar months differ in length, z gives the total number of nights in the lunar month, and p the full-moon night. The night ends at sunrise.[DF][DF][DF]",
     "buttonsolcal": "Light calendar",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
     "char_consonants": "bcdfghjklmnpqrstvwxyzñÑ",
