--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.7.1",
-        "updated": "2025-12-28 20:33:43"
+        "version": "1.7.2",
+        "updated": "2025-12-28 21:51:22"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -50,10 +50,10 @@
         "С"
     ],
     "tx_acc": [
-        "% Язык/Местоположение",
-        "% Часы",
-        "% Внешний вид",
-        "% Дополнительно"
+        "% Местоположение",
+        "% Время",
+        "% Отображение",
+        "% Режимы"
     ],
     "txgps_label": "GPS (шир., долг.) или название места",
     "txgpsauto": "Авто-локация",
@@ -61,7 +61,7 @@
     "txtimezone": "Часовой пояс",
     "txtimeformat": "24ч-формат",
     "txwelcomescr": "Подсказка GPS выкл.",
-    "txshowagni": "Агнихотра",
+    "txshowagni": "Агнихотра (GPS)",
     "txagnihotrain": "Агнихотра через: {agnih_countdo}",
     "txagnihotra": "Агнихотра",
     "txedgescreen": "Больше края",
@@ -124,7 +124,7 @@
     "txnosupport": "[i]ПРИМЕЧАНИЕ: Ваш язык пока не поддерживается, поэтому отображается английский. На последней странице есть кнопка «Автоперевод»[/i]",
     "uebanleitung": "Инструкция",
     "txanleitung": "[DF]{LANGSUPPORT}1. Поставьте галочку {txgpsauto}, чтобы автоматически обновлять ваше местоположение во время использования ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} для более точного определения места и синхронизации времени по GPS). {txgpsbutton} определяет вашу текущую позицию однократно и сохраняет её фиксированно.[~LF][~LF]В качестве альтернативы можно ввести название места или адрес в текстовое поле (если устройство это поддерживает) либо координаты (например, 50.94, 6.96). 3-й и 4-й вводы необязательны: приблизительная высота [м], приблизительная температура в сумерках [°C]. Затем поставьте галочку {txwelcomescr}. - При изменении базовых данных {txsunclock-} выполняет суточный расчёт, который в зависимости от устройства может занять 2[NDASH]30 секунд.[~LF][~LF]2. С помощью {txuhrsinn} вы задаёте, будет ли часы идти по часовой стрелке (юг) или против. Если изменить направление вращения, часть солнечного круга, находящаяся ниже горизонта, окажется перед вами (подробнее: см. следующую страницу). {txshowclock} отображает цифровые часы в правом верхнем углу циферблата.",
-    "txmore": "[DF]3. {txfarben} выбирает разные циферблаты. {txnachtmodus} {txlangarr|auto-} переключается на закате, -6° до конца сумерек, +6° до этого. [~LF][~LF]4. {txagnihotra} показывает метки для солнечной стрелки, а также время следующего нулевого прохода Солнца & обратный отсчёт. За шесть минут до Agnihotra отображение увеличивается и показываются секунды (⁺ = GPS актуален). {txfullscr} предотвращает отключение экрана: напр. чтобы повесить на стену старый [i]планшет[/i] с {txsunclock}. - Если ваши настройки иногда не применяются, нажмите кнопку обновления на циферблате внизу справа.[~LF][~LF]Циферблат можно приблизить двумя пальцами (или тройным тапом). Если хотите переместить увеличенное изображение, делайте это медленно. Быстрые движения листают на следующую страницу. - На следующей странице вы найдёте объяснение циферблата.[DF][DF][DF][b]–– Легенда циферблата:[/b]",
+    "txmore": "[DF]3. {txfarben} выбирает разные циферблаты. {txnachtmodus} {txlangarr|auto-} переключает при закате, -6° до конца сумерек, +6° до этого. [~LF][~LF]4. {txagnihotra} показывает метки для солнечной стрелки, а также время следующего нулевого прохождения Солнца и обратный отсчёт. За шесть минут до Агнихотры отображение увеличивается и показываются секунды (⁺ означает, что GPS актуален). {txfullscr} не даёт экрану выключаться и переключает в полноэкранный режим. - Если настройки однажды не применились, нажмите кнопку обновления внизу справа на циферблате.[~LF][~LF]Вы можете приблизить циферблат двумя пальцами (или тройным тапом). Если хотите перемещать увеличенное изображение, делайте это медленно. Быстрые движения перелистывают на следующую страницу. - На следующей странице вы найдёте объяснение циферблата.[DF][DF][DF][b]–– Легенда циферблата:[/b]",
     "txdata": "[DF]Данные",
     "txlocdata": "[DF]Расчёты «Солнечных часов Гордона» для вашего местоположения должны совпадать с астрономическим альманахом с точностью до 0,0005 угловых секунд³:[DF]",
     "txobjdata": "– Солнце¹ –[~LF]Время: {sun_clocktm}[~LF]Темпоральный час: {sun_temptm}[~LF]Световой день: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Солнцестояние: {sun_soli}[~LF]Равноденствие: {sun_equi}[~LF][~LF]– Луна² –[~LF]Новолуние: {moon_new}[~LF]Полнолуние: {moon_full}[~LF]Лунная ночь: {moon_gordon}[~LF]Освещённость: {moon_illum}[~LF]Размер: {moon_sizep} (85-100)[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]¹ Время: GPS = синхронизировано | Темпоральный час: местный неравный час (0,0[NDASH]11,9), ‘ἡ’ для дня и ‘ν’ для ночи. ‘φ’ ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | {lighttime-}: см. ниже | Световой день и Агнихотра: восход[NDASH]закат сегодня [восход завтра], ⁺ = текущий GPS | ² Полная и новая Луна: момент (через/до скольких дней) | Лунная ночь: см. ниже | ³ Диаметр Луны ≈ 2000 угловых секунд[DF][DF]",
