--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.7.1",
-        "updated": "2025-12-28 20:33:43"
+        "version": "1.7.2",
+        "updated": "2025-12-28 21:51:22"
     },
     "txwelcome": "Willkommen",
     "quotes": [
@@ -48,10 +48,10 @@
         "N"
     ],
     "tx_acc": [
-        "% Sprache/Standort",
-        "% Uhr",
-        "% Aussehen",
-        "% Extras"
+        "% Standort",
+        "% Zeit",
+        "% Darstellung",
+        "% Modi"
     ],
     "txgps_label": "GPS (lat, lon) oder Ortsname",
     "txgpsauto": "Auto-Ortung",
@@ -60,7 +60,7 @@
     "txtimeformat": "24h-Format",
     "txshowclock": "Uhrzeit anzeigen",
     "txwelcomescr": "GPS-Hinweis aus",
-    "txshowagni": "Agnihotra zeigen",
+    "txshowagni": "Agnihotra (GPS)",
     "txagnihotrain": "Agnihotra in: {agnih_countdo}",
     "txagnihotra": "Agnihotra",
     "txedgescreen": "Mehr Rand",
@@ -81,7 +81,7 @@
         "ru": "Russisch",
         "zh": "Chinesisch"
     },
-    "txfullscr": "Immer an",
+    "txfullscr": "Wanduhr-Modus",
     "txnachtmodus": "Dunkelmodus",
     "txnachtmodusarr": {
         "auto": "automatisch",
@@ -122,7 +122,7 @@
     "txnosupport": "[i]HINWEIS: Ihre Sprache wird noch nicht unterstützt, daher wird Englisch angezeigt. Auf der letzten Seite finden Sie einen Knopf „Auto-Übersetzung“[/i]",
     "uebanleitung": "Anleitung",
     "txanleitung": "[DF]{LANGSUPPORT}1. Setzen Sie das Häkchen bei {txgpsauto}, um Ihren Standort während der Nutzung automatisch zu aktualisieren ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} für genauere Ortsbestimmung und GPS Zeitabgleich). {txgpsbutton} bestimmt Ihre aktuelle Position einmalig und übernimmt diese fest.[~LF][~LF]Alternativ können Sie einen Ortsnamen oder eine Adresse in das Textfeld eingeben (wenn Ihr Gerät dies unterstützt) oder Koordinaten (z.B. 50.94, 6.96). Ein 3. und 4. Eintrag sind optional: die grobe Höhe [m], die ungefähre Temperatur bei Dämmerung [°C]. Anschließend setzen Sie das Häkchen bei {txwelcomescr}. - Bei Änderungen grundlegender Daten führt {txsunclock-} eine Tagesberechnung durch, die je nach Gerät zwischen 2[NDASH]30 Sekunden dauern kann.[~LF][~LF]2. Mit {txuhrsinn} legen Sie fest, ob die Uhr im Uhrzeigersinn läuft (Süden) oder dagegen. Wenn Sie die Drehrichtung ändern, liegt der unter dem Horizont liegende Teil des Sonnenkreises vor Ihnen (Details s. nächste Seite). {txshowclock} blendet oben rechts auf dem Ziffernblatt eine Digitaluhr ein.",
-    "txmore": "[DF]3. {txfarben} wählt verschiedene Ziffernblätter. {txnachtmodus} {txlangarr|auto-} wechselt bei Sonnenuntergang, -6° zum Ende der Dämmerung, +6° davor. [~LF][~LF]4. {txagnihotra} zeigt Markierungen für den Sonnenzeiger sowie die Zeit des nächsten Nulldurchlaufs der Sonne & Countdown. Sechs Minuten vor Agnihotra werden die Anzeige vergrößert und Sekunden eingeblendet (⁺ = GPS aktuell). {txfullscr} verhindert das Ausschalten des Bildschirms: z.B. um ein altes [i]Tablet[/i] mit {txsunclock} an die Wand zu hängen. - Falls Ihre Einstellungen einmal nicht übernommen werden, tippen Sie auf dem Ziffernblatt unten rechts auf den Aktualisierungsknopf.[~LF][~LF]In das Ziffernblatt können Sie mit zwei Fingern hineinzoomen (oder mit Dreifachtipp). Wenn Sie das gezoomte Bild verschieben wollen, machen Sie es langsam. Schnelle Bewegungen wischen zur nächsten Seite. - Auf der nächsten Seite finden Sie eine Erklärung des Ziffernblatts.[DF][DF][DF][b]–– Legende Ziffernblatt:[/b]",
+    "txmore": "[DF]3. {txfarben} wählt verschiedene Ziffernblätter. {txnachtmodus} {txlangarr|auto-} wechselt bei Sonnenuntergang, -6° zum Ende der Dämmerung, +6° davor. [~LF][~LF]4. {txagnihotra} zeigt Markierungen für den Sonnenzeiger sowie die Zeit des nächsten Nulldurchlaufs der Sonne & Countdown. Sechs Minuten vor Agnihotra werden Anzeige vergrößert und Sekunden eingeblendet (⁺ heißt GPS aktuell). {txfullscr} verhindert das Ausschalten des Bildschirms und schaltet auf Vollbild. - Falls Ihre Einstellungen einmal nicht übernommen werden, tippen Sie auf dem Ziffernblatt unten rechts auf den Aktualisierungsknopf.[~LF][~LF]In das Ziffernblatt können Sie mit zwei Fingern hineinzoomen (oder mit Dreifachtipp). Wenn Sie das gezoomte Bild verschieben wollen, machen Sie es langsam. Schnelle Bewegungen wischen zur nächsten Seite. - Auf der nächsten Seite finden Sie eine Erklärung des Ziffernblatts.[DF][DF][DF][b]–– Legende Ziffernblatt:[/b]",
     "txdata": "[DF]Daten",
     "txlocdata": "[DF]Berechnungen von {txgordonssunclock-} für Ihren individuellen Standort sollten mit dem astronomischen Almanach auf 0,0005 Bogensekunden übereinstimmen³:[DF]",
     "txobjdata": "– Sonne¹ –[~LF]Uhrzeit: {sun_clocktm}[~LF]Temporalstunde: {sun_temptm}[~LF]Lichttag: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Sonnenwende: {sun_soli}[~LF]Nachtgleiche: {sun_equi}[~LF][~LF]– Mond² –[~LF]Neumond: {moon_new}[~LF]Vollmond: {moon_full}[~LF]Mondnacht: {moon_gordon}[~LF]Beleuchtet: {moon_illum}[~LF]Größe: {moon_sizep} (85-100)[~LF][~LF]– Helligkeit –[~LF]Venus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturn: {saturn_magp} (77-100)[~LF]Merkur: {merkur_magp} (0-100)[~LF][~LF]¹ Uhrzeit: GPS = synchronisiert | Temporalstunde: lokale, ungleiche Stunde (0,0[NDASH]11,9) „ἡ“ des Tages oder „ν“ der Nacht. „φ“ Nachtwache mit ungleichen „Minuten“ (0φ00[NDASH]3φ59) | {lighttime-}: s.u. | Lichttag & Agnihotra: Aufgang[NDASH]Untergang heute [Aufgang morgen], ⁺ = aktuelles GPS | ² Voll- und Neumond: Zeitpunkt (in/vor Tagen) | Mondnacht: s.u. | ³ Mond ist ca. 2000 Bogensek. groß[DF][DF]",
