--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.7.1",
-        "updated": "2025-12-28 20:33:43"
+        "version": "1.7.2",
+        "updated": "2025-12-28 21:51:22"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -48,10 +48,10 @@
         "N"
     ],
     "tx_acc": [
-        "% Idioma/Ubicación",
-        "% Reloj",
-        "% Apariencia",
-        "% Extras"
+        "% Ubicación",
+        "% Tiempo",
+        "% Pantalla",
+        "% Modos"
     ],
     "txgps_label": "GPS (lat, lon) o nombre del lugar",
     "txgpsauto": "Auto-ubicar",
@@ -60,7 +60,7 @@
     "txtimeformat": "Formato 24h",
     "txshowclock": "Mostrar la hora",
     "txwelcomescr": "Nota GPS desactivado",
-    "txshowagni": "Mostrar Agnihotra",
+    "txshowagni": "Agnihotra (GPS)",
     "txagnihotrain": "Agnihotra en: {agnih_countdo}",
     "txagnihotra": "Agnihotra",
     "txedgescreen": "Más borde",
@@ -122,7 +122,7 @@
     "txnosupport": "[i]NOTA: Su idioma aún no ha sido traducido. En la última página encontrará un botón «Traducción automática»[/i]",
     "uebanleitung": "Instrucciones",
     "txanleitung": "[DF]{LANGSUPPORT}1. Marque {txgpsauto} para actualizar automáticamente su ubicación durante el uso ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} para una determinación del lugar más precisa y sincronización horaria por GPS). {txgpsbutton} determina su posición actual una sola vez y la guarda de forma fija.[~LF][~LF]Como alternativa, puede introducir un nombre de lugar o una dirección en el campo de texto (si su dispositivo lo admite) o coordenadas (p. ej. 50.94, 6.96). Una 3. y 4. entrada son opcionales: la altura aproximada [m], la temperatura aproximada al crepúsculo [°C]. A continuación, marque {txwelcomescr}. - Si cambia datos básicos, {txsunclock-} realiza un cálculo diario que, según el dispositivo, puede tardar entre 2[NDASH]30 segundos.[~LF][~LF]2. Con {txuhrsinn} define si el reloj gira en el sentido de las agujas del reloj (sur) o al contrario. Si cambia el sentido de giro, la parte del círculo solar que queda bajo el horizonte estará delante de usted (detalles: ver la página siguiente). {txshowclock} muestra un reloj digital en la parte superior derecha de la esfera.",
-    "txmore": "[DF]3. {txfarben} selecciona diferentes esferas. {txnachtmodus} {txlangarr|auto-} cambia al atardecer, -6° hasta el final del crepúsculo, +6° antes. [~LF][~LF]4. {txagnihotra} muestra marcas para el puntero solar, así como la hora del próximo cruce por cero del Sol & cuenta atrás. Seis minutos antes de Agnihotra se amplía la pantalla y se muestran los segundos (⁺ = GPS actual). {txfullscr} evita que la pantalla se apague: p. ej. para colgar un [i]tablet[/i] antiguo con {txsunclock} en la pared. - Si en algún momento no se aplican sus ajustes, toque el botón de actualización en la parte inferior derecha de la esfera.[~LF][~LF]Puede ampliar la esfera con dos dedos (o con triple toque). Si quiere desplazar la imagen ampliada, hágalo lentamente. Los movimientos rápidos pasan a la siguiente página. - En la página siguiente encontrará una explicación de la esfera.[DF][DF][DF][b]–– Leyenda de la esfera:[/b]",
+    "txmore": "[DF]3. {txfarben} selecciona diferentes esferas. {txnachtmodus} {txlangarr|auto-} cambia al atardecer, -6° hasta el final del crepúsculo, +6° antes. [~LF][~LF]4. {txagnihotra} muestra marcas para el indicador solar, así como la hora del próximo cruce por cero del Sol y la cuenta atrás. Seis minutos antes de Agnihotra se amplía la visualización y se muestran los segundos (⁺ significa que el GPS está actualizado). {txfullscr} evita que la pantalla se apague y cambia a pantalla completa. - Si alguna vez no se aplican los ajustes, toca el botón de actualización abajo a la derecha de la esfera.[~LF][~LF]Puedes ampliar la esfera con dos dedos (o con triple toque). Si quieres mover la imagen ampliada, hazlo despacio. Los movimientos rápidos pasan a la página siguiente. - En la página siguiente encontrarás una explicación de la esfera.[DF][DF][DF][b]–– Leyenda de la esfera:[/b]",
     "txdata": "[DF]Datos",
     "txlocdata": "[DF]Los cálculos del Reloj de sol de Gordon para su ubicación específica deben coincidir con el almanaque astronómico con una precisión de 0,0005 segundos de arco³:[DF]",
     "txobjdata": "– Sol¹ –[~LF]Hora: {sun_clocktm}[~LF]Hora temporal: {sun_temptm}[~LF]Día de luz: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Solsticio: {sun_soli}[~LF]Equinoccio: {sun_equi}[~LF][~LF]– Luna² –[~LF]Luna nueva: {moon_new}[~LF]Luna llena: {moon_full}[~LF]Noche lunar: {moon_gordon}[~LF]Iluminada: {moon_illum}[~LF]Tamaño: {moon_sizep} (85-100)[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]¹ Hora: GPS = sincronizada | Hora temporal: hora local desigual (0,0[NDASH]11,9) ‘ἡ’ del día o ‘ν’ de la noche. ‘φ’ vigilia nocturna con “minutos” desiguales (0φ00[NDASH]3φ59) | {lighttime-}: véase más abajo | Día de luz y Agnihotra: salida[NDASH]puesta de hoy [salida de mañana], ⁺ = GPS actual | ² Luna llena y nueva: momento (en/antes de días) | Noche lunar: véase más abajo | ³ La Luna mide aprox. 2000 segundos de arco[DF][DF]",
